--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 node_modules/
-config/
+config/config.env
 
 # # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
