Created a working api for translating a piece of text

--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "Gan Ding Han",
   "license": "ISC",
   "dependencies": {
+    "@vitalets/google-translate-api": "^3.0.0",
     "body-parser": "^1.19.0",
     "concurrently": "^5.1.0",
     "dotenv": "^8.2.0",
