Created a separate auth server in Node. Tested with REST.http and the endpoint works. Still figuring out how to route the frontend request to this auth server instead of the main server.

--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
+    "authServer": "nodemon authServer.js",
     "client": "cd ../client/ && npm start",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run authServer\" \"npm run client\""
   },
   "author": "Gan Ding Han",
   "license": "ISC",
