--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "concurrently": "^5.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^1.0.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
     "passport-local": "^1.0.0"
