--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "http-proxy-middleware": "^1.0.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^2.3.0"
   }
 }
