Added some code to try and deploy the app on heroku

--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "server": "nodemon server.js",
     "authServer": "nodemon authServer.js",
     "client": "cd ../client/ && npm start",
-    "dev": "concurrently \"npm run server\" \"npm run authServer\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run authServer\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Gan Ding Han",
   "license": "ISC",
