--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
     "authServer": "nodemon authServer.js",
     "client": "cd ../client/ && npm start",
     "dev": "concurrently \"npm run server\" \"npm run authServer\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install ../client && npm run build ../client"
   },
   "author": "Gan Ding Han",
   "license": "ISC",
