--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,7 @@
     "server": "nodemon server.js",
     "authServer": "nodemon authServer.js",
     "client": "cd ../client/ && npm start",
-    "dev": "concurrently \"npm run server\" \"npm run authServer\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "dev": "concurrently \"npm run server\" \"npm run authServer\" \"npm run client\""
   },
   "author": "Gan Ding Han",
   "license": "ISC",
